Fix scroll up arrow on mobile

--- a/src/components/scrollup/scrollup.css
+++ b/src/components/scrollup/scrollup.css
@@ -46,7 +46,7 @@
 /* For medium devices */
 @media screen and (max-width: 768px) {
   .show-scroll {
-    bottom: 4rem;
+    bottom: calc(4rem + env(safe-area-inset-bottom, 0));
   }
 }
 
